--- a/5.6/Dockerfile
+++ b/5.6/Dockerfile
@@ -1,16 +1,18 @@
 FROM ubuntu:trusty
 
+ARG MYSQL_VERSION=5.6.38
+
 WORKDIR /mysql-debug
 
 RUN apt-get update && \
     DEBIAN_FRONTEND=noninteractive apt-get install build-essential gdb gdbserver cmake wget curl libncurses5-dev -y -o Dpkg::Options::='--force-confdef' -o Dpkg::Options::='--force-confold' && \
-    wget http://ftp.jaist.ac.jp/pub/mysql/Downloads/MySQL-5.6/mysql-5.6.37.tar.gz && \
-    tar zxf mysql-5.6.37.tar.gz && \
-    cd mysql-5.6.37 && \
+    wget http://ftp.jaist.ac.jp/pub/mysql/Downloads/MySQL-5.6/mysql-${MYSQL_VERSION}.tar.gz && \
+    tar zxf mysql-${MYSQL_VERSION}.tar.gz && \
+    cd mysql-${MYSQL_VERSION} && \
     CFLAGS=-O0 cmake -DWITH_PIC=1 -DWITH_DEBUG=1 -DWITH_INNODB_EXTRA_DEBUG=1 -DCMAKE_INSTALL_PREFIX=/mysql-debug && \
     make -j$(getconf _NPROCESSORS_ONLN) install && \
     cd .. && \
-    rm -rf mysql-5.6.37 && \
+    rm -rf mysql-${MYSQL_VERSION} && \
     echo '[mysqld]\nskip-host-cache\nskip-name-resolve\nskip-grant-tables' > /etc/my.cnf && \
     rm /etc/sysctl.d/10-ptrace.conf && \
     sysctl -p
